# 3d-rendering

./: .gitignore  3D Rendering.sln  README
3D Rendering/: 3D Rendering.vcxproj  3D Rendering.vcxproj.filters  CMakeLists.txt  DepthPixel.cpp  DepthPixel.h  GameEngine.cpp  GameEngine.h  Light.h  Model.cpp  Model.h  Player.h  Profiler.h  RenderingEngine.cpp  RenderingEngine.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vertex.h  main.cpp
3D Rendering/tief3DS/: TIEF.3DS  tief.mtl
